<resources>
    <string name="app_name">Study</string>
    <string name="close">关闭</string>
    <string name="open">打开</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--main left-->
    <string name="icon_home">&#xe63b;</string>
    <string name="icon_catalog">&#xe66d;</string>
    <string name="icon_about">&#xe605;</string>
    <string name="main_left_play">计划</string>
    <string name="if_back">&#xe622;</string>
    <string name="play_content">内容</string>
    <string name="play_desc">描述</string>
    <string name="play_end_time">结束时间</string>
    <string name="play_isRemind">是否提醒</string>
    <string name="play_type">计划类型</string>
    <string name="play_type_day">每日</string>
    <string name="play_type_short">短期</string>
    <string name="play_type_long">长期</string>
    <string name="play_remind_no">不提醒</string>
    <string name="play_remind_yes">提醒</string>
    <string name="play_date">计划日期</string>
    <string name="play_add">添加</string>
    <string name="if_remind">&#xe613;</string>
    <string name="test">// 把下面的绘制代码移到 super.onDraw() 的上面，就可以让原主体内容盖住你的绘制代码了         // （或者你也可以把 super.onDraw() 移到这段代码的下面）         Layout layout = getLayout();         bounds.left = layout.getLineLeft(1);         bounds.right = layout.getLineRight(1);         bounds.top = layout.getLineTop(1);         bounds.bottom = layout.getLineBottom(1);         canvas.drawRect(bounds, paint);         bounds.left = layout.getLineLeft(layout.getLineCount() - 3);         bounds.right = layout.getLineRight(layout.getLineCount() - 3);         bounds.top = layout.getLineTop(layout.getLineCount() - 3);         bounds.bottom = layout.getLineBottom(layout.getLineCount() - 3);         canvas.drawRect(bounds, paint);</string>

    <string-array name="interpolators">
        <item>AccelerateDecelerateInterpolator</item>
        <item>LinearInterpolator</item>
        <item>AccelerateInterpolator</item>
        <item>DecelerateInterpolator</item>
        <item>AnticipateInterpolator</item>
        <item>OvershootInterpolator</item>
        <item>AnticipateOvershootInterpolator</item>
        <item>BounceInterpolator</item>
        <item>CycleInterpolator</item>
        <item>PathInterpolator</item>
        <item>FastOutLinearInInterpolator</item>
        <item>FastOutSlowInInterpolator</item>
        <item>LinearOutSlowInInterpolator</item>
    </string-array>
</resources>
