<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_normal"
    android:orientation="vertical">

    <include layout="@layout/title_back"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_content"
                />

            <EditText
                android:id="@+id/id_play_content"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_desc"
                />

            <EditText
                android:id="@+id/id_play_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_date"
                />

            <EditText
                android:id="@+id/id_play_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_end_time"
                />

            <EditText
                android:id="@+id/id_play_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_isRemind"
                />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/id_play_remind_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:checked="true"
                    android:text="@string/play_remind_no"
                    />

                <RadioButton
                    android:id="@+id/id_play_remind_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/play_remind_yes"
                    />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_type"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/id_play_type_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:checked="true"
                    android:text="@string/play_type_day"
                    />

                <RadioButton
                    android:id="@+id/id_play_type_short"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/play_type_short"
                    />

                <RadioButton
                    android:id="@+id/id_play_type_long"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/play_type_long"
                    />
            </RadioGroup>


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/id_play_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_bg1"
        android:enabled="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/play_add"
        android:textColor="@color/white"/>

</LinearLayout>
