<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/id_left_my"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tanner"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/id_left_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <com.tanner.study.widget.IconFontTextView
            android:textSize="@dimen/icon_size"
            android:id="@+id/id_left_icon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_home"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_left_catalog"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <com.tanner.study.widget.IconFontTextView
            android:textSize="@dimen/icon_size"
            android:id="@+id/id_left_icon_catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_catalog"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="目录"
            />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/id_left_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <com.tanner.study.widget.IconFontTextView
            android:textSize="@dimen/icon_size"
            android:id="@+id/id_left_icon_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_about"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关于我们"
            />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/id_left_play_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <com.tanner.study.widget.IconFontTextView
            android:textSize="@dimen/icon_size"
            android:id="@+id/id_left_icon_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_about"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_left_play"
            />

    </LinearLayout>


</LinearLayout>

